// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes : user_workspaces GET /user_workspaces/:id returns user_workspace by id 1`] = `
Object {
  "status": "success",
  "user_workspace": Object {
    "created_at": "2020-10-22T01:35:29.500Z",
    "id": 1,
    "updated_at": "2020-10-22T01:35:29.500Z",
    "userId": 1,
    "workspaceId": 1,
  },
}
`;

exports[`routes : user_workspaces POST /user_workspaces creates new user_workspace 1`] = `
Object {
  "status": "success",
  "user_workspace": Object {
    "created_at": Any<String>,
    "id": 4,
    "updated_at": Any<String>,
    "userId": 2,
    "workspaceId": 2,
  },
}
`;

exports[`routes : user_workspaces routes : user_workspaces GET /user_workspaces returns all user_workspaces 1`] = `
Object {
  "status": "success",
  "user_workspaces": Array [
    Object {
      "created_at": "2020-10-22T01:35:29.233Z",
      "id": 1,
      "updated_at": "2020-10-22T01:35:29.233Z",
      "userId": 1,
      "workspaceId": 1,
    },
    Object {
      "created_at": "2020-10-22T01:35:29.233Z",
      "id": 2,
      "updated_at": "2020-10-22T01:35:29.233Z",
      "userId": 2,
      "workspaceId": 1,
    },
    Object {
      "created_at": "2020-10-22T01:35:29.233Z",
      "id": 3,
      "updated_at": "2020-10-22T01:35:29.233Z",
      "userId": 1,
      "workspaceId": 2,
    },
  ],
}
`;
